@@ -1,3 +1,5 @@
+   got patch from Const Kaplisnky with CursorPosUpdate encoding and some Docs
+   sync'ed with newest RealVNC (ZRLE encoding)
    a HTTP request for tunnelling was added (to fool strict web proxies)
    sync'ed with TightVNC 1.2.5
 0.4
